bk_ida/gccida/g3/force_nonfallthru_and_redirect
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_nonfallthru_and_redirect/src/cfgrtl.c:1408:4: error: expected ';' after expression
rtx v31; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_nonfallthru_and_redirect/src/cfgrtl.c:1408:5: error: use of undeclared identifier 'v31'
rtx v31; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_nonfallthru_and_redirect/src/cfgrtl.c:1411:4: error: expected ';' after expression
rtx v34; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_nonfallthru_and_redirect/src/cfgrtl.c:1411:5: error: use of undeclared identifier 'v34'
rtx v34; // rdi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_nonfallthru_and_redirect/src/cfgrtl.c:1413:4: error: expected ';' after expression
rtx v37; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_nonfallthru_and_redirect/src/cfgrtl.c:1413:5: error: use of undeclared identifier 'v37'
rtx v37; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_nonfallthru_and_redirect/src/cfgrtl.c:1426:5: error: expected ';' after expression
edge succ; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_nonfallthru_and_redirect/src/cfgrtl.c:1426:6: error: use of undeclared identifier 'succ'
edge succ; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_nonfallthru_and_redirect/src/cfgrtl.c:1427:5: error: expected ';' after expression
edge v51; // rdx 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_nonfallthru_and_redirect/src/cfgrtl.c:1427:6: error: use of undeclared identifier 'v51'
edge v51; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_nonfallthru_and_redirect/src/cfgrtl.c:1461:1: error: use of undeclared identifier 'succ'
succ = entry_exit_blocks[0].succ; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_nonfallthru_and_redirect/src/cfgrtl.c:1463:6: error: use of undeclared identifier 'succ'
if ( succ ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_nonfallthru_and_redirect/src/cfgrtl.c:1465:11: error: use of undeclared identifier 'succ'
if ( e == succ ) 
          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_nonfallthru_and_redirect/src/cfgrtl.c:1475:1: error: use of undeclared identifier 'v51'
v51 = succ; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_nonfallthru_and_redirect/src/cfgrtl.c:1475:7: error: use of undeclared identifier 'succ'
v51 = succ; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_nonfallthru_and_redirect/src/cfgrtl.c:1476:1: error: use of undeclared identifier 'succ'
succ = succ->succ_next; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_nonfallthru_and_redirect/src/cfgrtl.c:1476:8: error: use of undeclared identifier 'succ'
succ = succ->succ_next; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_nonfallthru_and_redirect/src/cfgrtl.c:1477:7: error: use of undeclared identifier 'succ'
if ( !succ ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_nonfallthru_and_redirect/src/cfgrtl.c:1479:11: error: use of undeclared identifier 'succ'
if ( e == succ ) 
          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/force_nonfallthru_and_redirect/src/obj/cfgrtl.o] Error 1
